{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 53,
  "lineage": "c27b3cc8-5c5a-280d-3d4c-cbc0eb43f4af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "traefik_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb73ee73479fdf5a",
            "arn": "arn:aws:ec2:us-east-1:585768148089:elastic-ip/eipalloc-0bb73ee73479fdf5a",
            "domain": "vpc",
            "id": "eipalloc-0bb73ee73479fdf5a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-169-124.compute-1.amazonaws.com",
            "public_ip": "3.215.169.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "traefik-lb-eip"
            },
            "tags_all": {
              "Name": "traefik-lb-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:585768148089:instance/i-0221c3692d5afdf76",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2LoadBalancerInstanceProfile",
            "id": "i-0221c3692d5afdf76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "vockeyprod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eed91c68690b9d7b",
            "private_dns": "ip-172-31-66-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.66.124",
            "public_dns": "ec2-3-236-253-194.compute-1.amazonaws.com",
            "public_ip": "3.236.253.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b637fbe28e53b215",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin_ssh_production"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07ef8d731542349d5",
            "tags": {
              "Name": "master1",
              "k8s.io/role/node": "master",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tags_all": {
              "Name": "master1",
              "k8s.io/role/node": "master",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0ca6d2c2d4c0e12"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_lb_instance_profile",
            "aws_iam_role.ec2_load_balancer_role",
            "aws_key_pair.vockeyprod",
            "aws_security_group.admin_ssh_production",
            "tls_private_key.vockeyprod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:585768148089:instance/i-0a7a4ce4097a4ea5a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2LoadBalancerInstanceProfile",
            "id": "i-0a7a4ce4097a4ea5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "vockeyprod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ab437d63ace463b",
            "private_dns": "ip-172-31-69-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.69.66",
            "public_dns": "ec2-44-221-47-94.compute-1.amazonaws.com",
            "public_ip": "44.221.47.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04b1a575cca2fecae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin_ssh_production"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07ef8d731542349d5",
            "tags": {
              "Name": "master2",
              "k8s.io/role/node": "master",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tags_all": {
              "Name": "master2",
              "k8s.io/role/node": "master",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0ca6d2c2d4c0e12"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_lb_instance_profile",
            "aws_iam_role.ec2_load_balancer_role",
            "aws_key_pair.vockeyprod",
            "aws_security_group.admin_ssh_production",
            "tls_private_key.vockeyprod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:585768148089:instance/i-047f59da9dcbc8198",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2LoadBalancerInstanceProfile",
            "id": "i-047f59da9dcbc8198",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "vockeyprod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2086be450cdb0cf",
            "private_dns": "ip-172-31-75-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.75.191",
            "public_dns": "ec2-44-222-188-156.compute-1.amazonaws.com",
            "public_ip": "44.222.188.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f4fe77c93e50bc8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin_ssh_production"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07ef8d731542349d5",
            "tags": {
              "Name": "master3",
              "k8s.io/role/node": "master",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tags_all": {
              "Name": "master3",
              "k8s.io/role/node": "master",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0ca6d2c2d4c0e12"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_lb_instance_profile",
            "aws_iam_role.ec2_load_balancer_role",
            "aws_key_pair.vockeyprod",
            "aws_security_group.admin_ssh_production",
            "tls_private_key.vockeyprod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:585768148089:instance/i-052d55d4f510438a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2LoadBalancerInstanceProfile",
            "id": "i-052d55d4f510438a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "vockeyprod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb4e002566cc6f08",
            "private_dns": "ip-172-31-65-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.65.230",
            "public_dns": "ec2-34-204-194-107.compute-1.amazonaws.com",
            "public_ip": "34.204.194.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06b772b256d69b288",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin_ssh_production"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ef8d731542349d5",
            "tags": {
              "Name": "worker1",
              "k8s.io/role/node": "worker",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tags_all": {
              "Name": "worker1",
              "k8s.io/role/node": "worker",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0ca6d2c2d4c0e12"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_lb_instance_profile",
            "aws_iam_role.ec2_load_balancer_role",
            "aws_key_pair.vockeyprod",
            "aws_security_group.admin_ssh_production",
            "tls_private_key.vockeyprod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:585768148089:instance/i-0637a3f1b2c7f881b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2LoadBalancerInstanceProfile",
            "id": "i-0637a3f1b2c7f881b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "vockeyprod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0590b93eb2255ba44",
            "private_dns": "ip-172-31-78-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.78.118",
            "public_dns": "ec2-3-209-12-207.compute-1.amazonaws.com",
            "public_ip": "3.209.12.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e5fa9d9cae0bfb6f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin_ssh_production"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ef8d731542349d5",
            "tags": {
              "Name": "worker2",
              "k8s.io/role/node": "worker",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tags_all": {
              "Name": "worker2",
              "k8s.io/role/node": "worker",
              "kubernetes.io/cluster/apotheose-cluster": "owned",
              "topology.kubernetes.io/region": "us-east-1",
              "topology.kubernetes.io/zone": "us-east-1f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0ca6d2c2d4c0e12"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_lb_instance_profile",
            "aws_iam_role.ec2_load_balancer_role",
            "aws_key_pair.vockeyprod",
            "aws_security_group.admin_ssh_production",
            "tls_private_key.vockeyprod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_ssh_production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group/sg-0a0ca6d2c2d4c0e12",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a0ca6d2c2d4c0e12",
            "ingress": [],
            "name": "admin_ssh_production",
            "name_prefix": "",
            "owner_id": "585768148089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "admin_ssh_production"
            },
            "tags_all": {
              "Name": "admin_ssh_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4b38653df63f28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_2379",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2379,
            "id": "sgrule-2792186932",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-04fcb0294075e965f",
            "self": false,
            "source_security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "timeouts": null,
            "to_port": 2379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_2380",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2380,
            "id": "sgrule-3063115580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-075f370f93b07a497",
            "self": false,
            "source_security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_ssh_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-0550d3ab7b27f8cf4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0550d3ab7b27f8cf4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-0550d3ab7b27f8cf4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-0ec7fdee447fa71ff",
            "cidr_ipv4": "176.172.132.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0ec7fdee447fa71ff",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-0ec7fdee447fa71ff",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-0a12b566f3416c2e4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a12b566f3416c2e4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-0a12b566f3416c2e4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-0b429171293867da2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0b429171293867da2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-0b429171293867da2",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port_10250",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-0df65eca9ed2a03c7",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10250,
            "id": "sgr-0df65eca9ed2a03c7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-0df65eca9ed2a03c7",
            "tags": null,
            "tags_all": {},
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port_1194",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-072d20ebcb3b23871",
            "cidr_ipv4": "176.172.132.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 1194,
            "id": "sgr-072d20ebcb3b23871",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-072d20ebcb3b23871",
            "tags": null,
            "tags_all": {},
            "to_port": 1194
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port_6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-0c3dc3ebaa7092f1d",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0c3dc3ebaa7092f1d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-0c3dc3ebaa7092f1d",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-081c7f60d2e27022b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-081c7f60d2e27022b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-081c7f60d2e27022b",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port_9345",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-08546ffa5916b43fc",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9345,
            "id": "sgr-08546ffa5916b43fc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-08546ffa5916b43fc",
            "tags": null,
            "tags_all": {},
            "to_port": 9345
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-009c8c7e7d4062e37",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8472,
            "id": "sgr-009c8c7e7d4062e37",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-009c8c7e7d4062e37",
            "tags": null,
            "tags_all": {},
            "to_port": 8472
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port_ping_kube_vip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-0d992dbb2ddf384ac",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0d992dbb2ddf384ac",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-0d992dbb2ddf384ac",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "192.168.1.0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-0a25c1a278c3118a5",
            "cidr_ipv4": "192.168.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a25c1a278c3118a5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-0a25c1a278c3118a5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        },
        {
          "index_key": "77.207.199.0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-0791055a776beff22",
            "cidr_ipv4": "77.207.199.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0791055a776beff22",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-0791055a776beff22",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_in_myip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585768148089:security-group-rule/sgr-078159c2552b7a970",
            "cidr_ipv4": "176.172.132.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-078159c2552b7a970",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a0ca6d2c2d4c0e12",
            "security_group_rule_id": "sgr-078159c2552b7a970",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin_ssh_production"
          ]
        }
      ]
    }
  ]
}